rpi5/whoami/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: whoami
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whoami.local`) || Host(`whoami.internal`)
      services:
        - name: whoami
          port: 80
  tls:
    secretName: whoami-cert-tls
    domains:
      - main: whoami.local
        sans:
          - whoami.internal
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: whoami
      port:
        number: 80
  tls:
    - hosts:
        - whoami
